--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://p3tershark.github.io/portfolio-website",
+  "homepage": "http://p3tershark.github.io/",
   "name": "p3tershark",
   "version": "0.1.0",
   "private": true,
